Bug 501885 - KPhotoAlbum 6.0.1 does not support purpose plugins
Summary: KPhotoAlbum 6.0.1 does not support purpose plugins
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-22 20:58 UTC by Johannes Zarl-Zierl
Modified: 2025-10-05 20:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2025-03-22 20:58:00 UTC
SUMMARY
KPhotoAlbum is missing support for the purpose plugin system in its Qt6/KF6 port.


STEPS TO REPRODUCE
0. Make sure that kphotoalbum was compiled agains KF6purpose (default on most distributions)
1. Start kphotoalbum
2. Go to "Help | KPhotoAlbum Feature Status"


OBSERVED RESULT
"Plug-Ins available" shows "no".

EXPECTED RESULT
"Plug-Ins available" shows "yes".
Comment 1 Johannes Zarl-Zierl 2025-03-22 21:24:14 UTC
Git commit 157b59ba1492d96c1f96d12a733241c872bcfefe by Johannes Zarl-Zierl.
Committed on 22/03/2025 at 21:14.
Pushed by johanneszarl into branch 'master'.

Fix purpose plugin support

Purpose was somehow forgotten when porting to Qt6/KF6 because purpose
was correctly found by cmake, but then the purpose-related code was
silently not compiled.

What was tested:
- Plugin support is marked as available in the feature dialog
- The "Modules" menu is populated
- Sharing one image via mail
- Sharing the whole demo database via "Copy to clipboard..."

M  +1    -0    CHANGELOG.md
M  +1    -1    CMakeLists.txt
M  +1    -1    MainWindow/FeatureDialog.cpp
M  +2    -2    MainWindow/Window.cpp
M  +1    -1    Plugins/PurposeMenu.cpp
M  +1    -1    Plugins/PurposeMenu.h
M  +1    -1    lib/kpabase/config-kpa-plugins.h.in

https://invent.kde.org/graphics/kphotoalbum/-/commit/157b59ba1492d96c1f96d12a733241c872bcfefe
Comment 2 CrowdSnuffkin 2025-09-24 18:47:30 UTC
Can you please share which version of kphotoalbum will have this feature enabled correcly within binary package as installed per apt-get?
I still see this bug here on 6.0.1.
Comment 3 Johannes Zarl-Zierl 2025-09-28 19:36:15 UTC
We're currently preparing a release. You can expect it to happen within the next few weeks.
Thanks for your patience!