Fix purpose plugin support

Purpose was somehow forgotten when porting to Qt6/KF6 because purpose
was correctly found by cmake, but then the purpose-related code was
silently not compiled.

What was tested:
- Plugin support is marked as available in the feature dialog
- The "Modules" menu is populated
- Sharing one image via mail
- Sharing the whole demo database via "Copy to clipboard..."

BUG: 501885